wl-65 fix for horizontal tabs view and behavour on mobile

--- a/src/components/shared/tabs/Tabs.scss
+++ b/src/components/shared/tabs/Tabs.scss
@@ -4,47 +4,61 @@
 .common-tabs {
   display: flex;
   flex-direction: column;
+  position: relative;
 
   &__navigation {
     display: flex;
-    align-self: start;
     position: relative;
     width: 100%;
     height: 38px;
 
-    &:after {
-      content: '';
-      position: absolute;
-      bottom: 0;
-      display: block;
-      width: 100%;
-      height: 1px;
-      z-index: 1;
-      background: $grey;
-    }
+    &-wrapper {
+      display: flex;
+      align-items: center;
+      height: 100%;
 
-    &.center {
-      justify-content: center;
-      &:after {
-        background: linear-gradient(
-          90deg,
-          rgba(0, 0, 0, 0) 0%,
-          rgba($dark-grey, 0.6),
-          rgba($dark-grey, 0.6),
-          rgba(0, 0, 0, 0) 100%
-        );
+      @media (min-width: $viewport-md-min-w) {
+        &:after {
+          content: '';
+          position: absolute;
+          left: 0;
+          bottom: 0;
+          display: block;
+          width: 100%;
+          height: 1px;
+          z-index: 1;
+          background: $grey;
+        }
+      }
+
+      &.center {
+        margin: 0 auto;
+
+        @media (min-width: $viewport-md-min-w) {
+          &:after {
+            background: linear-gradient(
+              90deg,
+              rgba(0, 0, 0, 0) 0%,
+              rgba($dark-grey, 0.6),
+              rgba($dark-grey, 0.6),
+              rgba(0, 0, 0, 0) 100%
+            );
+          }
+        }
+      }
+
+      &.right {
+        justify-content: end;
+      }
+
+      &.left {
+        justify-content: start;
       }
     }
 
-    &.right {
-      justify-content: end;
-    }
-
-    &.left {
-      justify-content: start;
-    }
-
     .tab__link {
+      white-space: nowrap;
+
       &__label {
         font-size: 18px;
         line-height: 28px;
@@ -248,17 +262,32 @@
     }
   }
 
-  &:not(.vertical) > .common-tabs__navigation {
+  &:not(.vertical) {
     @media (max-width: $viewport-md-w) {
-      overflow-x: scroll;
-      scroll-behavior: smooth;
-      @include hideScrollbar;
-
-      .navigation__links {
+      &:after {
+        content: '';
         position: absolute;
-        width: max-content;
-        left: 0;
-        top: 0;
+        top: 27px;
+        display: block;
+        width: 100%;
+        height: 1px;
+        z-index: 1;
+        background: $grey;
+      }
+    }
+
+    & > .common-tabs__navigation {
+      @media (max-width: $viewport-md-w) {
+        overflow-x: scroll;
+        scroll-behavior: smooth;
+        @include hideScrollbar;
+
+        .navigation__links {
+          position: absolute;
+          width: max-content;
+          left: 0;
+          top: 0;
+        }
       }
     }
   }
